vlib/v/checker/tests/array_sort_err.out
vlib/v/checker/tests/array_sort_err.vv:3:6: error: too many arguments in call to `.sort()`
    1 | fn main() {
    2 |     mut arr := [3, 2, 1]
    3 |     arr.sort(a < b, a)
      |         ~~~~~~~~~~~~~~
    4 | }
